added client and admin endpoints for "club" job
