# resources/views/pdf/job/variant/club/index.blade.php
@@ -1,0 +1,18 @@
+@extends('pdf.job.layout.index')
+
+@section('content')
+    <div class="page-breaker">
+        @include('pdf.job.template.primary-information.index')
+    </div>
+    <div class="page-breaker">
+        @include('pdf.job.variant.club.info')
+    </div>
+    <div class="page-breaker">
+        @include('pdf.job.template.experience.index')
+    </div>
+    <div class="page-breaker">
+        @include('pdf.job.template.contacts.index')
+    </div>
+
+    @include('pdf.job.template.reporting-periods.index')
+@endsection
